Update the README.org file

--- a/README.org
+++ b/README.org
@@ -1,3 +1,6 @@
 * Invoice
-
 Minimal invoice LaTeX template
+
+| English                   | Spanish                   |
+|---------------------------+---------------------------|
+| [[./img/invoice-english.png]] | [[./img/invoice-english.png]] |
