Update invoice example in Spanish

--- a/README.org
+++ b/README.org
@@ -3,4 +3,4 @@ Minimal invoice LaTeX template
 
 | English                   | Spanish                   |
 |---------------------------+---------------------------|
-| [[./img/invoice-english.png]] | [[./img/invoice-english.png]] |
+| [[./img/invoice-english.png]] | [[./img/invoice-spanish.png]] |
