--- a/examples/invoice-spanish.tex
+++ b/examples/invoice-spanish.tex
@@ -11,18 +11,19 @@
 
 \makeheader{\today}
 
-\invoice{7}{Secure Networking}{
-  Secure networking demo and consultation delivered to The Tor Project, Inc.
+\invoice{7}{Actuación musical}{
+  Concierto realizado por Aitana Ocaña en Olaz el 10 de octubre de 2025
 }
-\receiver{The Tor Project Inc.}{
-  390 West Street, Suite 3\\
-  Mansfield, 02048--1170, USA
-}{20-8096820}
+\receiver{Ayuntamiento del Valle de Egüés}{
+  Plaza San Sebastián 1\\
+  31620 Olaz, Valle de Egüés, Navarra\\
+  País Vasco
+}{}
 
 \begin{invoicetable}
-	\invoiceitem{Secure Networking Demo}{1}{650}
-	\invoiceitem{Consultation (2 hours)}{2}{200}
-	\invoiceitem{Travel expenses}{1}{150}
+	\invoiceitem{Actuación musical}{1}{12000}
+	\invoiceitem{Ensayo previo}{2}{2000}
+	\invoiceitem{Gastos de desplazamiento}{1}{800}
 \end{invoicetable}
 
 \conditions{Términos y Condiciones: Los productos/servicios ofrecidos no
@@ -30,12 +31,12 @@
   vigente. El prestador no asume responsabilidad por usos indebidos de
   los mismos. El pago se realizará en un plazo de 15 días.}
 
-\emitter{Richard Matthew Stallman}{Free Software Foundation\\
-  31 Milk St \# 960789\\
-  Boston, MA 02196 (USA)}{}
+\emitter{Aitana Ocaña Morales}{Calle Gran Vía, 22\\
+  08010 Barcelona\\
+  Países Catalanes}{71513026E}
 \contact{
-  \href{mailto:rms@gnu.org}{rms@gnu.org}\\
-  +1 (210) 319-1828\\
+  \href{mailto:aitana@ocana.cat}{aitana@ocana.cat}\\
+  +34 627 23 30 31\\
 }
 \bank{
   N26 --- NTSBESM1XXX\\
